--- a/ios/Podfile
+++ b/ios/Podfile
@@ -50,7 +50,7 @@ target 'JitsiMeetSDK' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
-
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
   # React Native plugins
   #
 
